# api/schemas.py
@@ -111,18 +111,10 @@ class ObservationSchema(BaseSchema):
         return operation
 
 
-class ObservationAggregationSchema(BaseSchema):
-    def get_operation(self, path, method):
-        operation = super().get_operation(path, method)
-        if operation.get("operationId", "").startswith("list"):
-            serializer = self.get_request_serializer(path, method)
-            type_mappings = {
-                "counter": {"type": "integer"},
-                "start_time": {"type": "string", "format": "date-time"},
-                "end_time": {"type": "string", "format": "date-time"},
-                "measurement_type": {"type": "string"},
-                "order": {"type": "string", "enum": ["asc", "desc"]},
-            }
-            parameters = self._generate_query_parameters(serializer, type_mappings)
-            operation.get("parameters", [])[:0] = parameters
-        return operation
+class ObservationAggregateSchema(AutoSchema):
+    def get_operation_id(self, path, method):
+        # The operation id (or name) is generated from the model,
+        # thus this needs to be done manually to avoid conflict
+        operation_id = super().get_operation_id(path, method)
+        operation_id = f"{operation_id}Aggregate"
+        return operation_id
